// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary four - small 1`] = `
Array [
  <div>
    <div>
      <div>
        secondary-1
      </div>
    </div>
    <div />
    <div>
      <div>
        secondary-2
      </div>
    </div>
  </div>,
  <div />,
  <div>
    <div>
      <div>
        secondary-3
      </div>
    </div>
    <div />
    <div>
      <div>
        secondary-4
      </div>
    </div>
  </div>,
]
`;

exports[`2. secondary four - medium 1`] = `
<div>
  <div>
    <div>
      <div>
        secondary-1
      </div>
    </div>
    <div />
    <div>
      <div>
        secondary-2
      </div>
    </div>
  </div>
  <div />
  <div>
    <div>
      secondary-3
    </div>
    <div />
    <div>
      secondary-4
    </div>
  </div>
</div>
`;
